<resources>
    <string name="app_name">TrainBuz</string>
    <string name="destation_station_label">Destination</string>
    <string name="tokyo">東京  (東京都)</string>
    <string name="latitude">Latitude</string>
    <string name="tokyo_lat">35.681391</string>
    <string name="longitude">Longitude</string>
    <string name="tokyo_longitude">139.766103</string>
    <string name="change_destination">Change Destinatin</string>
    <string name="start_buzz">Start Buzz</string>
    <string name="stop_buzz">Stop Buzz</string>
    <string name="location_permission_rationale">Need location permission to find out where you are now.</string>
    <string name="requestion_permission">Get Permission</string>
    <string name="cur_latitude">Current Latitude</string>
    <string name="cur_longitude">Current Longitude</string>
    <string name="cur_distance">Current Distance</string>
    <string name="buzz_on">Buzz is on</string>
    <string name="buzz_off">Buzz is off</string>
</resources>
