<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".BuzzStartActivity" android:id="@+id/root_layout">

    <TextView
            android:text="@string/destation_station_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp"
            android:id="@+id/textViewDes" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp" android:id="@+id/textViewStation"
            android:text="@string/tokyo"
            app:layout_constraintStart_toStartOf="@+id/guideline" android:layout_marginStart="16dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewLatitude"
            app:layout_constraintStart_toStartOf="@+id/guideline" android:layout_marginStart="16dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/textViewStation"
            android:text="@string/tokyo_lat"/>
    <TextView
            android:text="@string/latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:id="@+id/textViewLatLabel" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewDes"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline" app:layout_constraintGuide_begin="138dp"
                                          android:orientation="vertical"/>
    <TextView
            android:text="@string/longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:id="@+id/textViewLonLabel" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewLatLabel"/>
    <TextView
            android:text="@string/tokyo_longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewLongitude" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewLatitude"
            app:layout_constraintStart_toStartOf="@+id/guideline" android:layout_marginStart="16dp"/>
    <Button
            android:text="@string/change_destination"
            android:layout_height="wrap_content"
            android:id="@+id/buttonChangeDes"
            app:layout_constraintBaseline_toBaselineOf="@+id/textViewStation"
            app:layout_constraintStart_toEndOf="@+id/textViewStation" android:layout_marginStart="16dp"
            android:layout_width="wrap_content"/>
    <Button
            android:text="@string/start_buzz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonStartBuzz"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewLongitude" app:layout_constraintHorizontal_bias="0.501"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="229dp" android:id="@+id/guideline2"/>
    <TextView
            android:text="@string/cur_latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:id="@+id/textViewCurLatLabel"
            android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/cur_longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewCurLongLabel" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewCurLatLabel"/>
    <TextView
            android:text="0.0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            android:id="@+id/textViewCurLat" android:layout_marginStart="16dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline2"/>
    <TextView
            android:text="0.0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewCurLon" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewCurLat"
            app:layout_constraintStart_toStartOf="@+id/guideline" android:layout_marginStart="16dp"/>
</android.support.constraint.ConstraintLayout>